--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,33 @@
 /*  your css code here. If applicable */
+table.middle {
+            border: 1px solid black;
+            border-collapse: collapse;
+            margin: auto;
+            margin-top: 20px;
+        }
+
+        /* Apply styling to table cells */
+        table.middle td {
+            border: 1px solid black;
+            padding: 1px;
+            text-align: center;
+        }
+
+        /* Apply background colors to specific rows */
+        .green {
+            background-color: green;
+        }
+
+        .blue {
+            background-color: blue;
+        }
+
+        /* Center-align text */
+        .center {
+            text-align: center;
+        }
+
+        /* Right-align text */
+        .right {
+            text-align: right;
+        }
